--- a/WeatherData/WeatherData.csproj
+++ b/WeatherData/WeatherData.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Content Include="bin\Debug\net6.0\Data\temp.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="bin\Debug\net6.0\Data\tempdata5-med fel.txt" />
+  </ItemGroup>
+
 </Project>
